# rust_chat_app_x

./: .env  Cargo.toml  Dockerfile  README.md  diesel.toml  server.db  sqlite:rooms.db
migrations/2023-06-30-000000_create_rooms/: up.sql
migrations/2024-06-30-011408_create_users/: up.sql
migrations/2024-07-01-140308_create_auth_tokens/: down.sql  up.sql
migrations/2024-07-02-233033_create_live_users_table/: down.sql  up.sql
migrations/2024-07-02-233307_create_chat_room_chats_table/: down.sql  up.sql
migrations/2024-07-02-233522_create_direct_msgs_table/: down.sql  up.sql
src/: auth.rs  connection_handler.rs  database.rs  main.rs  main3_x.md  models.rs  room_manager.rs  schema.rs
