[package]
name = "chat_app_main"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
futures-util = "0.3"
tokio-stream = "0.1"
url = "2.2"
diesel = { version = "2.0.0", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
chrono = "0.4"
bcrypt = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
rusqlite = "0.26.0"